--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>SJ</title>
+    <title>SJ's Store</title>
     <script src="sample.json"></script>
     <script src="select.js"></script>
 </head>
